--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" type="image/x-icon" href="/images/ico.png">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/ico.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
     <title>AueBot</title>
@@ -16,7 +16,7 @@
         <div class="container">
             <a target="_blank" href="https://discordapp.com/oauth2/authorize?&client_id=734641560087691295&scope=bot&permissions=0" class="btn">Добавить бота на сервер</a>
       
-            <a download class="bttn" href="/download/ankeer.theme.css">Скачать тему</a>
+            <a download class="bttn" href="./download/ankeer.theme.css">Скачать тему</a>
 
             <p><b>Автор:</b><a target="_blank" class="vk" href="https://vk.com/4nkeer">ankeer</a></p>
             <div class="loader hide"></div>
