--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <title>MaslachSoft</title>
 </head>
 <body>
-    
+    <div id="load">
+        <div>
+            <img src="./images/logo3.gif" alt="" width="200" height="200">
+        </div>
+    </div>
+        
     <header>
             <div class="background">
                 <div class="heading">
