rename+remove files

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <section class="cat">
         <div class="categories">
             <ul>
-                <li><a id="games" href="#games" >Игры</a></li>
-                <li><a id="discord" href="#discord">Discord</a></li>
+                <li><a  href="#games" >Игры</a></li>
+                <li><a  href="#discord">Discord</a></li>
             </ul>
             </div>
             <div class="content">
@@ -46,7 +46,7 @@
                 
                     <article class="postcard blue">
                         <a class="postcard__img_link" href="#">
-                            <img class="postcard__img" src="https://picsum.photos/1000/1000" alt="Image Title" />
+                            <img class="postcard__img" src="./images/game1.jpg" alt="Image Title" />
                         </a>
                         <div class="postcard__text">
                             <h1 class="postcard__title blue"><a href="#">Ауе приключения</a></h1>
@@ -57,10 +57,12 @@
                             </div>
                             <div class="postcard__bar"></div>
                             <div class="postcard__preview-txt">Новелла "Приключения ауешников".
-                              <br>  <span>Программист:</span> <a>ankeer</a>
+                                <hr class="hr1">
+                              <br>  <span>Программист:</span> <a target="_blank" id="ankeer" href="https://vk.com/4nkeer">ankeer</a>
+                              <br>  <span>Сценарий:</span> <a target="_blank" id="boxemno" href="https://vk.com/boxemno">.boxemno</a>
 
                             </div>
-                                    <a href="#"><i class="fas fa-play mr-2"></i>Скачать</a>
+                                    <a class="download" href="/download/">Скачать</a>
                                 </li>
                             </ul>
                         </div>
