--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </header>
     <section class="cat">
         <div class="categories">
+            <h2>Категории</h2>
             <ul>
                 <li><a  href="#games" >Игры</a></li>
                 <li><a  href="#discord">Discord</a></li>
@@ -57,12 +58,19 @@
                             </div>
                             <div class="postcard__bar"></div>
                             <div class="postcard__preview-txt">Новелла "Приключения ауешников".
+                                <br> <span>Персонажи:</span> 
+                                <a target="_blank" id="pers" href="https://vk.com/4nkeer">Маслач</a>, 
+                                <a target="_blank" id="pers" href="https://vk.com/boxemno">Толик</a>,
+                                <a target="_blank" id="pers" href="https://vk.com/4ist0_p0_pr1koly">Дюха</a>, 
+                                <a target="_blank" id="pers" href="https://vk.com/k.berezin2014">Коля</a>,
+                                <a target="_blank" id="pers" href="https://vk.com/lilbatonfe">Коваль</a>,
+                                <a target="_blank" id="pers" href="https://vk.com/timur.galiev41">Тимур</a>
                                 <hr class="hr1">
                               <br>  <span>Программист:</span> <a target="_blank" id="ankeer" href="https://vk.com/4nkeer">ankeer</a>
                               <br>  <span>Сценарий:</span> <a target="_blank" id="boxemno" href="https://vk.com/boxemno">.boxemno</a>
 
                             </div>
-                                    <a class="download" href="/download/">Скачать</a>
+                                    <a target="_blank" class="download" href="https://drive.google.com/file/d/17jlI0ciSlySjev5JEC-MNaAWfx2JYF4F/view?usp=sharing">Скачать</a>
                                 </li>
                             </ul>
                         </div>
