--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="background">
                 <div class="heading">
                     <h1 id="headd">MASLACH</h1>
-                    <font id="descr" face="lucida console">AUE</font>
+                    <font id="descr" face="lucida console">C:\ankeer\MaslachSoft> Hello World!<span class="line"></span></font>
                </div>
                 <div class="cube"></div>
                 <div class="cube"></div>
