--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="preloader">
         <div class="pre_wrapper">
             <span class="icon_animate">
-                <img src="/images/logo3.gif" alt="">
+                <img src="./images/logo3.gif" alt="">
                 <div class="textloading">
                     <font id="loading" face="lucida console"></font>
                 </div>
