--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <div class="categories">
             <h2>Категории</h2>
             <ul>
-                <li><a  href="#games" >Игры</a></li>
-                <li><a  href="#discord">Discord</a></li>
+                <li><p  id="games" >Игры</p></li>
+                <li><p  id="discord">Discord</p></li>
             </ul>
             </div>
             <!-- Контент -->
