--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </header>
 
     <!-- Категории -->
-    <section class="cat">
+    <section class="parallax">
+        <div class="cat" >
         <div class="categories">
             <h2>Категории</h2>
             <ul>
@@ -96,6 +97,7 @@
                         </div>
                     </article>
                 </main>
+            </div>
             </div>
     </section>
 
