--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
     <div id="preloader">
         <div class="pre_wrapper">
             <span class="icon_animate">
-                <img src="./images/logo3.gif" alt="">
-                <div class="textloading">
-                    <font id="loading" face="lucida console"></font>
+              <div class="textloading">
+                  ><font id="loading" face="lucida console"></font>
                 </div>
-                
             </span>
         </div>
     </div>
