--- a/content/discord.html
+++ b/content/discord.html
@@ -25,13 +25,14 @@
                         <div id="ex1" class="modal">
                             <font face="lucida console"><span id="secret"></span></font>
                           </div>
-                          <li><a id="ex" href="#ex1" rel="modal:open">Имеет секретную команду</a></li>
-                        <li></li>
+                          <li><a id="ex" rel="modal:open">Имеет секретную команду</a></li>
+                        <li>Проводить опросы</li>
+                        <li>Собирать информацию о пользователе</li>
                     </ul>
                     <hr class="hr1">
                   <br>  <span>Разработчик:</span> <a target="_blank" id="ankeer" href="https://vk.com/4nkeer">ankeer</a>
                 </div>
-                        <a class="download2" target="_blank" href="">Пригласить на сервер</a>
+                        <a class="invite" target="_blank" href="">Пригласить на сервер</a>
                     </li>
                 </ul>
             </div>
