--- a/content/games.html
+++ b/content/games.html
@@ -5,7 +5,7 @@
 <main class="container">
     <div class="h1 text-center" id="pageHeaderTitle">Игры</div>
     <article class="postcard blue">
-        <a class="postcard__img_link" href="#games">
+        <a class="postcard__img_link">
             <img class="postcard__img" src="./images/game1.jpg" alt="Image Title" />
         </a>
         <div class="postcard__text">
