--- a/content/discord.html
+++ b/content/discord.html
@@ -23,7 +23,7 @@
                         <li>Проигрывать музыку</li>
                         
                         <div id="ex1" class="modal">
-                            <font face="lucida console"><span id="secret"></span></font>
+                           <span style="color: white;">></span> <font face="lucida console"><span id="secret"></span></font>
                           </div>
                           <li><a id="ex" rel="modal:open">Имеет секретную команду</a></li>
                         <li>Проводить опросы</li>
