--- a/content/games.html
+++ b/content/games.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="./css/discord.css">
+    <link rel="stylesheet" href="./css/games.css">
 </head>
 
 <main class="container">
