--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
 
-    
+    <!-- Typeit -->
     <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
+
+    <!-- Icon -->
     <link rel="icon" type="image/x-icon" href="./images/ico.png">
+
     <title>MaslachSoft</title>
 </head>
 <body>
-    <!-- Загрузочный экран -->
+    <!-- Загрузочный экран/Load screen -->
     <div id="preloader">
         <div class="pre_wrapper">
             <span class="icon_animate">
@@ -43,7 +46,7 @@
         </div>
     </div>
     
-    <!-- Шапка -->
+    <!-- Шапка/Header -->
     <header>
             <div class="background">
                 <div class="heading">
@@ -58,22 +61,22 @@
              </div>
     </header>
 
-    <!-- Категории -->
+    <!-- Категории/Categories -->
     <section class="parallax">
         <div class="cat" >
             <div class="categories">
-                <h2>Категории</h2>
                     <ul>
                         <li><p  id="games" >Игры</p></li>
                         <li><p  id="discord">Discord</p></li>
                     </ul>
             </div>
-    <!-- Контент -->
+        </div>
+    <!-- Контент/Content -->
             <div class="content">
                 <main class="container">
                     <div class="h1 text-center" id="pageHeaderTitle">Игры</div>
                     <article class="postcard blue">
-                        <a class="postcard__img_link" href="#games">
+                        <a class="postcard__img_link">
                             <img class="postcard__img" src="./images/game1.jpg" alt="Image Title" />
                         </a>
                         <div class="postcard__text">
@@ -104,7 +107,7 @@
                         </div>
                     </article>
                     <article class="postcard blue">
-                        <a class="postcard__img_link" href="#games">
+                        <a class="postcard__img_link">
                             <img class="postcard__img" src="./images/no_image.png" alt="Image Title" />
                         </a>
                         <div class="postcard__text">
@@ -124,21 +127,23 @@
                         </div>
                     </article>
                 </main>
-            </div>
+
     </section>
 
-    <!-- Футер -->
+    <!-- Футер/Footer -->
     <footer>
-        <!-- Виджет сервера дискорд -->
+        <!-- Виджет сервера дискорд/Widget for discord -->
         <div class="discord">
             <iframe src="https://discord.com/widget?id=713660997256085605&theme=dark" width="300" height="200" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
-        <!-- Ссылка на автора -->
+        <!-- Ссылка на автора/Link to the author  -->
         <div class="author">
             <a href="https://vk.com/4nkeer">ankeer</a>
         </div>
     </footer>
+    <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- File js -->
     <script src="./js/main.js"></script>
 </body>
 </html>
