--- a/content/discord.html
+++ b/content/discord.html
@@ -3,10 +3,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 </head>
+
 <!-- Bot -->
     <main class="container">
         <div class="h1 text-center" id="pageHeaderTitle">Discord Софт</div>
-        <article style="background-image:url('./images/bgdisc.jpg');" class="postcard2 blue">
+        <article  class="postcard2 bot blue">
             <div class="postcard__text">
                 <h1 class="postcard__title blue"><a >Ауе Бот(в разработке)</a></h1>
                 <div class="postcard__subtitle small">
@@ -35,11 +36,10 @@
             </div>
         </article>
     </main>
+    
     <!-- Theme -->
     <main class="container">
-        <article style="background-image:url('./images/bgtheme.jpg');
-                        background-repeat:no-repeat;
-                        background-size:100%" class="postcard2 blue">
+        <article class="postcard2 darktheme blue">
             <div class="postcard__text">
                 <h1 class="postcard__title blue"><a>Тема<sup style="color: red; font-size: 20px;">Beta</sup></a></h1>
                 <div class="postcard__subtitle small">
@@ -59,7 +59,7 @@
                     <hr class="hr1">
                   <br>  <span>Разработчик:</span> <a target="_blank" id="ankeer" href="https://vk.com/4nkeer">ankeer</a>
                 </div>
-                        <a class="download-beta invite" download href="./download/ankeer.theme.css">Скачать</a>
+                        <a class="download-beta" download href="./download/ankeer.theme.css">Скачать</a>
             
             </div>
         </article>
