add Widget discord

--- a/index.html
+++ b/index.html
@@ -143,13 +143,18 @@
                 </main>
 
     </section>
-
+     <!-- Виджет сервера дискорд/Widget for discord -->
+     <div class="discord">
+        <a id='dis'>
+        <img src="./images/discord.png">
+        </a>
+        <div id="WidgetDS">
+            <iframe src="https://discord.com/widget?id=713660997256085605&theme=dark" 
+            width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
+      </div>
     <!-- Футер/Footer -->
     <footer>
-        <!-- Виджет сервера дискорд/Widget for discord -->
-        <div class="discord">
-            <iframe src="https://discord.com/widget?id=713660997256085605&theme=dark" width="300" height="200" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-        </div>
         <!-- Ссылка на автора/Link to the author  -->
         <div class="author">
             <a href="https://vk.com/4nkeer">ankeer</a>
@@ -159,5 +164,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- File js -->
     <script src="./js/main.js"></script>
+    <script src="./js/WidgetDS.js"></script>
 </body>
 </html>
