--- a/content/discord.html
+++ b/content/discord.html
@@ -59,7 +59,7 @@
                     <hr class="hr1">
                   <br>  <span>Разработчик:</span> <a target="_blank" id="ankeer" href="https://vk.com/4nkeer">ankeer</a>
                 </div>
-                        <a class="download-beta" download href="./download/ankeer.theme.css">Скачать</a>
+                        <a class="download-beta invite" download href="./download/ankeer.theme.css">Скачать</a>
             
             </div>
         </article>
