--- a/content/games.html
+++ b/content/games.html
@@ -16,7 +16,7 @@
                     </time>
                 </div>
                     <div class="postcard__bar"></div>
-                    <div class="postcard__preview-txt">Новелла "Приключения ауешников".
+                    <div class="postcard__preview-txt">Новелла<br id="novella">  "Приключения ауешников".
                         <br> <span>Персонажи:</span> 
                         <a target="_blank" id="pers" href="https://vk.com/4nkeer">Маслач</a>, 
                         <a target="_blank" id="pers" href="https://vk.com/boxemno">Толик</a>,
