--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
     <footer>
         <!-- Ссылка на автора/Link to the author  -->
         <div class="author">
-            <a href="https://vk.com/4nkeer">ankeer</a>
+            <a target="_blank" href="https://vk.com/4nkeer">М</a>
         </div>
+        
+    
     </footer>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
