--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="pre_wrapper">
             <span class="icon_animate">
               <div class="textloading">
-                  ><font id="loading" face="lucida console"></font>
+                  ><span id="loading" face="lucida console"></span>
                 </div>
             </span>
         </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="heading">
                     <h1 id="headd">MASLACH</h1>
-                    <font id="descr" face="lucida console">C:\ankeer\MaslachSoft> <span id="hellotext"></span></font>
+                    <span id="descr" face="lucida console">C:\ankeer\MaslachSoft> <span id="hellotext"></span></span>
                </div>
                 <div class="cube"></div>
                 <div class="cube"></div>
