--- a/index.htm
+++ b/index.htm
@@ -98,7 +98,7 @@
                             <span class="descr">.инф | .инф <@name></span> - пробить чела</code>
                     </div>
                     <div class="buttondiscord">
-                        <a href="">Подключить</a>
+                        <a href="https://discordapp.com/oauth2/authorize?&client_id=734641560087691295&scope=bot&permissions=0">Подключить</a>
                     </div>
                 </div>
                 <div class="imgdiscord">
