--- a/index.htm
+++ b/index.htm
@@ -123,7 +123,7 @@
                 <div class="text gtext">
                     <h1>eyagame 1</h1>
                     <div class="textp">
-                        <p>Визуалльная новелла про 6-ых еуашников</p>
+                        <p>Визуальная новелла про 6-ых еуашников</p>
                     </div>
                     <div class="buttondiscord">
                         <a>Скачать</a>
